--- a/main.css
+++ b/main.css
@@ -1460,10 +1460,10 @@ margin-bottom: 0.5em;
 
     /* HORIZONTAL MENU FIX*/
 
-  /*   @media (min-width: 480px) and (max-width:767px) {
+    @media (min-width: 480px) and (max-width:767px) {
       .mobile-menu-content {
         height: 100vh;
-    } */
+    }
 
     .mobilenav {
       margin-top: 12em;
@@ -1496,4 +1496,11 @@ margin-bottom: 0.5em;
  font-size: 1.125em;
  line-height: 1;
  font-weight: 700;
+}
+
+@media screen and (max-width: 1024px) {
+.artlogo {
+
+  width: 60%;
+}
 }
