--- a/main.css
+++ b/main.css
@@ -1458,6 +1458,12 @@ margin-bottom: 0.5em;
     padding-left: 1.5em;
     padding-right: 1.5em;
 }
+
+/* FUTER FIX*/
+    .futfix {
+      margin-top: 0.7em;
+  }
+
     }
 
     /* HORIZONTAL MENU FIX*/
@@ -1466,7 +1472,7 @@ margin-bottom: 0.5em;
       .mobile-menu-content {
         height: 100vh;
     }
-
+    
     .mobilenav {
       margin-top: 12em;
   }
