--- a/main.css
+++ b/main.css
@@ -1464,6 +1464,13 @@ margin-bottom: 0.5em;
       margin-top: 0.7em;
   }
 
+  /* SWIPER cont visina*/
+  .swiper-container {
+    height: 30em;
+}
+
+
+
     }
 
     /* HORIZONTAL MENU FIX*/
