--- a/main.css
+++ b/main.css
@@ -1476,6 +1476,11 @@ margin-bottom: 0.5em;
     height: 19em;
 }
 
+/*DOKUMENTI IKONA MARGIN*/
+.dociconwrap {
+  margin-right: 1.5em;
+}
+
 
 
     }
