--- a/main.css
+++ b/main.css
@@ -1489,6 +1489,10 @@ margin-bottom: 0.5em;
     height: 19em;
 }
 
+.swiper-container-gal {
+  height: 19em;
+}
+
 /*DOKUMENTI IKONA MARGIN*/
 .dociconwrap {
   margin-right: 1.5em;
