--- a/main.css
+++ b/main.css
@@ -1489,9 +1489,9 @@ margin-bottom: 0.5em;
     height: 19em;
 }
 
-.swiper-container-gal {
+/* .swiper-container-gal {
   height: 19em;
-}
+} */
 
 /*DOKUMENTI IKONA MARGIN*/
 .dociconwrap {
