--- a/main.css
+++ b/main.css
@@ -3,16 +3,16 @@
 SCROLLBAR FIX
 ================================================================================
 */
-/*
+
 body,
 html {
   
   margin: 0;
   padding: 0;
-  /*overflow-x: hidden; 
+  overflow-x: hidden; 
 }
 
-*/
+
 
 /*
 ================================================================================
