--- a/main.css
+++ b/main.css
@@ -4,6 +4,8 @@ SCROLLBAR FIX
 ================================================================================
 */
 
+* { border: 1px solid black; }
+
 body,
 html {
   
