--- a/main.css
+++ b/main.css
@@ -4,8 +4,8 @@ SCROLLBAR FIX
 ================================================================================
 */
 
-* { border: 1px solid black; }
-
+/* * { border: 1px solid black; }
+ */
 body,
 html {
   
