--- a/main.css
+++ b/main.css
@@ -1604,8 +1604,10 @@ margin-bottom: 0.5em;
 .logo-link-backwhite.w--current {
   padding-top: 2.9em;
 }
-
-
+/*homefix allnews*/
+.underline.alldoc.all-news {
+  bottom: -2.5em;
+}
 
 
 /*search field txt*/
