--- a/main.css
+++ b/main.css
@@ -297,7 +297,7 @@ SWIPER ASPECT RATIO FIX
 */
 
 .swiper-container, .swiper-container-gal {
- /*  aspect-ratio: 16/9; */
+ aspect-ratio: 16/9; 
  width: 100%;
   height: 100%;
   overflow: hidden;
