--- a/main.css
+++ b/main.css
@@ -588,7 +588,8 @@ user-select: none;
 */
 /* SEARCH INPUT TEXT COLOR */ 
   input[type="search"]::placeholder {
-    color: #f5f4f1;
+    /* color: #f5f4f1; */
+    color: #06f506;
     -webkit-appearance: none;
     -webkit-border-radius:0; 
     border-radius:0;
