--- a/main.css
+++ b/main.css
@@ -537,6 +537,9 @@ outline: none;
   -webkit-appearance: none;
   -webkit-border-radius:0; 
   border-radius:0;
+  -moz-box-sizing: content-box;
+-webkit-box-sizing: content-box;
+box-sizing: content-box;
 }
 
 
