--- a/main.css
+++ b/main.css
@@ -534,7 +534,9 @@ outline: none;
   font-size: 6.75em;
   line-height: 1;
   letter-spacing: -.024em;
-  padding: 0;
+  padding: 0 .5em 0 0;
+  -webkit-border-radius: 0;
+  border-radius: 0;
 }
 
 
@@ -591,7 +593,9 @@ user-select: none;
   input[type="search"]::placeholder {
     /* color: #f5f4f1; */
     color: #f1f5f1;
-   
+    -webkit-appearance: none;
+    -webkit-border-radius:0; 
+    border-radius:0;
 }
 
 /*
