--- a/main.css
+++ b/main.css
@@ -1242,9 +1242,9 @@ width: 1em;
 }
 
 /* DATUM U TEXT TEMPLATEU FIX */
-.div-block-4 {
+/* .div-block-4 {
   top: 0.4em;
-}
+} */
 
 /* SCROLL UP KONTAKT PAGE ICON*/
 .upwrap.kontakt.w--current {
