--- a/main.css
+++ b/main.css
@@ -1133,7 +1133,7 @@ COOKIE SKIN
 }
 
 .ch2-style-light .ch2-btn-secondary {
-    background: transparent !important;
+  background: #9b2557!important;
     color: #f5f4f1 !important;
 }
 .ch2-theme-bar .ch2-dialog {
