--- a/main.css
+++ b/main.css
@@ -462,17 +462,36 @@ transform-origin: top left;
 }
 
 
-@keyframes fade-in {
-  from {
-    opacity: 0;
-   /* transform: translateY(100px);*/
-  }
-  to {
-    opacity: 1;
-  /*  transform: translateY(0); */
-  }
+.swiper-container .swiper-wrapper .swiper-slide .up {
+    animation-name: fade-in;
+    animation-duration: 1s;
+    animation-fill-mode: both;
 }
 
+.swiper-container .swiper-wrapper .swiper-slide .up.fade-out {
+    animation-name: fade-out;
+    animation-duration: 1s;
+    animation-fill-mode: both;
+}
+
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fade-out {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
   /*
 ================================================================================
 SWIPER FIX
